# FastRayTracer

./: CMakeLists.txt  LICENSE  README.md
include/: Camera.h  Color.h  Hittable.h  HittableList.h  Image.h  Material.h  RTWeekend.h  Ray.h  Sphere.h  Vec3.h
src/: Image.cc  raytracer.cc
